--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title>KARTHIK'S WORLD</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	  <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet">
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
